@@ -15,77 +15,66 @@ import java.text.DecimalFormat;
 import java.util.ArrayList;
 import java.util.List;
 
+/**
+ * Utility class for handling strings,
+ * particularly for manipulating item names and lore in Minecraft with support for PlaceholderAPI and color codes.
+ */
 public class UtilsString {
 
+    /**
+     * Private constructor to prevent instantiation.
+     */
     UtilsString() {
         throw new UnsupportedOperationException();
     }
 
     /**
-     * Update the item with the description, covering both title and lore
+     * Updates the display name and lore of an ItemStack.
      *
-     * @param item    item to update
-     * @param desc    raw text
-     * @param p       player or null for placeHolderApi use
-     * @param color   translate colors
-     * @param holders additional Holders, must be even number with the format "to
-     *                replace","replacer","to replace 2","replacer 2"....
+     * @param item    The item to update.
+     * @param desc    The raw text for display name and lore.
+     * @param p       The player for PlaceholderAPI, or null if not used.
+     * @param color   Whether to translate color codes.
+     * @param holders Additional placeholders for text replacement must be in "toReplace", "replacement" pairs.
      */
     public static void updateDescription(@Nullable ItemStack item, @Nullable List<String> desc, @Nullable Player p, boolean color,
                                          String... holders) {
         if (item == null)
             return;
 
-        // prepare title and lore
         String title;
         ArrayList<String> lore;
         if (desc == null || desc.isEmpty()) {
             title = " ";
             lore = null;
         } else if (desc.size() == 1) {
-            if (desc.get(0) != null)
-                if (!desc.get(0).startsWith(ChatColor.RESET + ""))
-                    title = ChatColor.RESET + desc.get(0);
-                else
-                    title = desc.get(0);
-            else
-                title = null;
+            title = desc.getFirst() != null ? (desc.getFirst().startsWith(ChatColor.RESET + "") ? desc.getFirst() : ChatColor.RESET + desc.getFirst()) : null;
             lore = null;
         } else {
-            if (!desc.get(0).startsWith(ChatColor.RESET + ""))
-                title = ChatColor.RESET + desc.get(0);
-            else
-                title = desc.get(0);
+            title = desc.getFirst().startsWith(ChatColor.RESET + "") ? desc.getFirst() : ChatColor.RESET + desc.getFirst();
             lore = new ArrayList<>();
             for (int i = 1; i < desc.size(); i++)
-                if (desc.get(i) != null)
-                    if (!desc.get(i).startsWith(ChatColor.RESET + ""))
-                        lore.add(ChatColor.RESET + desc.get(i));
-                    else
-                        lore.add(desc.get(i));
-                else
-                    lore.add("");
+                lore.add(desc.get(i) != null ? (desc.get(i).startsWith(ChatColor.RESET + "") ? desc.get(i) : ChatColor.RESET + desc.get(i)) : "");
         }
 
-        // apply holders and colors for title and lore
         title = fix(title, p, color, holders);
         lore = fix(lore, p, color, holders);
 
-        // apply title and lore to item
         ItemMeta meta = item.getItemMeta();
+        if (meta ==  null) return;
         meta.setDisplayName(title);
         meta.setLore(lore);
         item.setItemMeta(meta);
-
     }
 
     /**
-     * @param list    raw text
-     * @param player  player or null for placeHolderApi use
-     * @param color   translate colors
-     * @param holders additional placeholders, must be even number with the format
-     *                "to replace#1","replacer#1","to replace#2","replacer#2"....
-     * @return a new list with fixed text, or null if list was null
+     * Processes a list of strings by applying placeholders, MiniMessage formatting, and color codes.
+     *
+     * @param list    The raw text list.
+     * @param player  The player for PlaceholderAPI, or null if not used.
+     * @param color   Whether to translate color codes.
+     * @param holders Additional placeholders for text replacement.
+     * @return A new list with formatted text, or null if the input list was null.
      */
     @Contract("!null, _, _, _ -> !null")
     public static @Nullable ArrayList<String> fix(@Nullable List<String> list, @Nullable Player player, boolean color, String... holders) {
@@ -98,16 +87,14 @@ public class UtilsString {
     }
 
     /**
-     * Set the description on an item clone, covering both title and lore original
-     * item is unmodified
+     * Creates a clone of an ItemStack and updates its description.
      *
-     * @param item        item to clone and update
-     * @param description raw text
-     * @param player      player or null for placeHolderApi use
-     * @param color       translate colors
-     * @param holders     additional placeholders must be even number with the format
-     *                    "to replace","replacer","to replace 2","replacer 2"…
-     * @return new item with display name and lore used for desc
+     * @param item        The item to clone and update.
+     * @param description The raw text for display name and lore.
+     * @param player      The player for PlaceholderAPI, or null if not used.
+     * @param color       Whether to translate color codes.
+     * @param holders     Additional placeholders for text replacement.
+     * @return A new ItemStack with the updated display name and lore, or null if the input item is null or air.
      */
     public static ItemStack setDescription(@Nullable ItemStack item, @Nullable List<String> description, @Nullable Player player, boolean color,
                                            String... holders) {
@@ -119,12 +106,19 @@ public class UtilsString {
         return itemCopy;
     }
 
+    /**
+     * Processes a single string by applying placeholders, MiniMessage formatting, and color codes.
+     *
+     * @param text    The raw text.
+     * @param player  The player for PlaceholderAPI, or null if not used.
+     * @param color   Whether to translate color codes.
+     * @param holders Additional placeholders for text replacement.
+     * @return The formatted text.
+     */
     @Contract("!null, _, _, _ -> !null")
     public static String fix(@Nullable String text, @Nullable Player player, boolean color, String... holders) {
         if (text == null)
             return null;
-
-        // holders
 
         if (holders != null && holders.length % 2 != 0)
             throw new IllegalArgumentException("holder without replacer");
@@ -132,15 +126,11 @@ public class UtilsString {
             for (int i = 0; i < holders.length; i += 2)
                 text = text.replace(holders[i], holders[i + 1]);
 
-        // papi
         if (player != null && Hooks.isPAPIEnabled())
             text = PlaceholderAPI.setPlaceholders(player, text);
 
-        //minimessage
         text = MiniMessage.miniMessage().deserialize(text).toString();
 
-
-        // color
         if (color)
             text = ChatColor.translateAlternateColorCodes('&', text);
 
@@ -148,8 +138,10 @@ public class UtilsString {
     }
 
     /**
-     * @param text text to revert
-     * @return a string with original colors and formats but with &amp; instead of §
+     * Reverts color codes by replacing the section symbol (§) with ampersand (&).
+     *
+     * @param text The text to process.
+     * @return The text with color codes reverted.
      */
     @Contract("!null -> !null")
     public static @Nullable String revertColors(@Nullable String text) {
@@ -159,8 +151,10 @@ public class UtilsString {
     }
 
     /**
-     * @param text text clear
-     * @return a string with no colors and no formats
+     * Removes all color codes and formatting from the text.
+     *
+     * @param text The text to clear.
+     * @return The plain text without colors or formatting.
      */
     @Contract("!null -> !null")
     public static @Nullable String clearColors(@Nullable String text) {
@@ -169,6 +163,14 @@ public class UtilsString {
         return ChatColor.stripColor(text);
     }
 
+    /**
+     * Formats a number to a string with a given number of decimal places.
+     *
+     * @param value    The number to format.
+     * @param decimals The number of decimal places.
+     * @param optional Whether trailing zeros should be removed.
+     * @return The formatted number as a string.
+     */
     public static @NotNull String formatNumber(double value, int decimals, boolean optional) {
         DecimalFormat df = new DecimalFormat("0");
         df.setMaximumFractionDigits(decimals);
